# MultiTenantSaas

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  INFRA_RUNBOOK.md  KUBERNETES_GUIDE.md  Makefile  RBAC_WORKFLOW.md  README.md  apply-db-migrations.ps1  apply-db-migrations.sh  auth_logs.txt  changes-24-04-2026.patch  docker-compose.dev.yml  docker-compose.local-prod.yml  docker-compose.prod.yml  docker-compose.yml  error_output  ps.txt
src/agents/: Dockerfile  pyproject.toml
src/agents/app/: config.py  embeddings.py  http.py  rag.py  redis.py  s3.py  streaming.py
src/agents/app/agents/: chat.py
src/agents/app/jobs/: __init__.py  api_tool.py  chat.py  cost_seg.py  ingest.py  pdf_gen.py
src/server/: Dockerfile  alembic.ini  pyproject.toml
src/server/alembic/: env.py
src/server/alembic/database/: sync_sql_into_default_chain.py
src/server/alembic/versions/: 001_initial_schema.py  002_local_embeddings.py  003_document_metadata.py  004_document_source_url.py  004_sqlsync_001_extensions.py  005_sqlsync_002_core_schema.py  006_sqlsync_003_rls_policies.py  007_sqlsync_004_add_password_hash.py  008_sqlsync_005_add_password_reset.py  009_sqlsync_006_create_documents_table.py  010_sqlsync_006_knowledge_base.py  011_sqlsync_007_add_session_id.py  012_sqlsync_008_add_document_metadata_columns.py  013_sqlsync_008_knowledge_asset_rbac.py  014_sqlsync_009_create_web_urls_table.py  015_sqlsync_010_create_knowledge_base_syncs_table.py  016_sqlsync_011_user_type_and_management.py  017_sqlsync_012_must_change_password.py  018_sqlsync_013_role_refactor_and_modules.py  019_seed_default_data.py  020_seed_password_fix.py  (+19 more)
src/server/app/: main.py
(+527 files in other folders)
