[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents"
version = "0.1.0"
description = "Multi-Tenant AI SaaS Agent Worker"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26",
    "httpx>=0.27",
    "google-genai>=1.0",
    "fastembed>=0.3",
    "psycopg[async]>=3.2",
    "pgvector>=0.3",
    "redis[hiredis]>=5.0",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "openai>=1.50",
    "boto3>=1.35",
    "aiofiles>=24.1",
    "pypdf>=5.0",
    "python-docx>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true
